--- a/index.html
+++ b/index.html
@@ -11,22 +11,45 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="/"><h3>WebStudio</h3></a>
+        <a href="/" class="logotype link-none-underline"
+          ><h3><span class="blue-text">Web</span>Studio</h3></a
+        >
         <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="/kontact">Kontact</a></li>
+          <li>
+            <a href="/agencja" class="agency link-none-underline">Agencja</a>
+          </li>
+          <li>
+            <a href="portfolio.html" class="portfolio link-none-underline"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="/kontact" class="contact-link link-none-underline"
+              >Kontact</a
+            >
+          </li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
-      </div>
+      <ul class="contacts-list">
+        <li>
+          <a
+            href="mailto:info@devstudio.com"
+            class="link-none-underline blue-text"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+48111111111" class="link-none-underline contacts"
+            >+48 111 111 111</a
+          >
+        </li>
+      </ul>
     </header>
 
     <main>
