--- a/portfolio.html
+++ b/portfolio.html
@@ -16,28 +16,70 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"><h3>WebStudio</h3></a>
-        <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="/kontact">Kontact</a></li>
+        <a href="/" class="logotype link-none-underline"
+          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+        >
+        <ul class="contacts-list">
+          <li>
+            <a href="/agencja" class="agency link-none-underline button"
+              >Agencja</a
+            >
+          </li>
+          <li>
+            <a
+              href="portfolio.html"
+              class="portfolio link-none-underline button"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="/kontact" class="contact-link link-none-underline button"
+              >Kontact</a
+            >
+          </li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
-      </div>
+      <ul class="contacts-list">
+        <li>
+          <a
+            href="mailto:info@devstudio.com"
+            class="link-none-underline blue-text button"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+48111111111" class="link-none-underline contacts button"
+            >+48 111 111 111</a
+          >
+        </li>
+      </ul>
     </header>
 
     <main>
       <div>
         <nav>
-          <ul>
-            <li><button type="button">Wszystkie</button></li>
-            <li><button type="button">Strony</button></li>
-            <li><button type="button">Aplikacje</button></li>
-            <li><button type="button">Dizajn</button></li>
-            <li><button type="button">Marketing</button></li>
+          <ul class="button-list">
+            <li>
+              <button type="button" class="button-list button">
+                Wszystkie
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-list button">Strony</button>
+            </li>
+            <li>
+              <button type="button" class="button-list button">
+                Aplikacje
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-list button">Dizajn</button>
+            </li>
+            <li>
+              <button type="button" class="button-list button">
+                Marketing
+              </button>
+            </li>
           </ul>
         </nav>
       </div>
@@ -50,7 +92,9 @@
               width="370"
               height="294"
             />
-            <p>Technocrack Strona internetowa</p>
+            <p class="subpage-name">
+              Technocrack<span class="subpage-type">Strona internetowa</span>
+            </p>
           </li>
           <li>
             <img
@@ -59,7 +103,10 @@
               width="370"
               height="294"
             />
-            <p>Grafika New Orlean vs Golden Star Dizajn</p>
+            <p class="subpage-name">
+              Grafika New Orlean vs Golden Star
+              <span class="subpage-type">Dizajn</span>
+            </p>
           </li>
           <li>
             <img
@@ -68,7 +115,9 @@
               width="370"
               height="294"
             />
-            <p>Restauracja Seafood Aplikacja</p>
+            <p class="subpage-name">
+              Restauracja Seafood <span class="subpage-type">Aplikacja</span>
+            </p>
           </li>
           <li>
             <img
@@ -77,7 +126,9 @@
               width="370"
               height="294"
             />
-            <p>Projekt Prime Marketing</p>
+            <p class="subpage-name">
+              Projekt Prime <span class="subpage-type">Marketing</span>
+            </p>
           </li>
           <li>
             <img
@@ -86,11 +137,16 @@
               width="370"
               height="294"
             />
-            <p>Projekt Boxes Aplikacja</p>
+            <p class="subpage-name">
+              Projekt Boxes <span class="subpage-type">Aplikacja</span>
+            </p>
           </li>
           <li>
             <img src="images/img12.jpg" alt="screen" width="370" height="294" />
-            <p>Inspiration has no Borders Strona internetowa</p>
+            <p class="subpage-name">
+              Inspiration has no Borders
+              <span class="subpage-type">Strona internetowa</span>
+            </p>
           </li>
           <li>
             <img
@@ -99,7 +155,9 @@
               width="370"
               height="294"
             />
-            <p>Magazyn Limited Edition Dizajn</p>
+            <p class="subpage-name">
+              Magazyn Limited Edition <span class="subpage-type">Dizajn</span>
+            </p>
           </li>
           <li>
             <img
@@ -108,22 +166,38 @@
               width="370"
               height="294"
             />
-            <p>Projekt LAB Marketing</p>
+            <p class="subpage-name">
+              Projekt LAB <span class="subpage-type">Marketing</span>
+            </p>
           </li>
           <li>
             <img src="images/img15.jpg" alt="laptop" width="370" height="294" />
-            <p>Growing Business Aplikacja</p>
+            <p>Growing Business <span class="subpage-type">Aplikacja</span></p>
           </li>
         </ul>
       </div>
     </main>
 
     <footer>
-      <h3>WebStudio</h3>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+      <h3>
+        <a href="/" class="logotype link-none-underline"
+          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+        >
+      </h3>
+      <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+      <ul class="contacts-list">
+        <li>
+          <a
+            href="mailto:info@devstudio.com"
+            class="link-none-underline blue-text button"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+48111111111" class="link-none-underline contacts button"
+            >+48 111 111 111</a
+          >
+        </li>
       </ul>
     </footer>
   </body>
