--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <a href="/" class="logotype link-none-underline"
-          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
         <ul class="contacts-list">
           <li>
@@ -175,7 +175,7 @@
     <footer>
       <h3>
         <a href="/" class="logotype link-none-underline"
-          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
       </h3>
       <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
