--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header>
       <nav>
         <a href="/" class="logotype link-none-underline"
-          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
         <ul class="contacts-list">
           <li>
@@ -181,7 +181,7 @@
     <footer>
       <h3>
         <a href="/" class="logotype link-none-underline"
-          ><h3><span class="blue-text button">Web</span>Studio</h3></a
+          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
       </h3>
       <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
