--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+      integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
-    <header>
+    <header class="header-container container">
+      <a href="/" class="logotype link-none-underline"
+        ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
+      >
       <nav>
-        <a href="/" class="logotype link-none-underline"
-          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
-        >
-        <ul class="contacts-list">
+        <ul class="nav-list">
           <li>
             <a href="/agencja" class="agency link-none-underline button"
               >Agencja</a
@@ -61,43 +68,43 @@
         <h1 class="main-section-header">
           EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
         </h1>
-        <button type="button" class="order-button button">Zamów usługę</button>
+        <button type="button" class="order-button">Zamów usługę</button>
       </section>
-      <div>
-        <ul>
-          <li>
-            <h4 class="main-text-header">LOREM IPSUM</h4>
-            <p class="main-text-section">
-              ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-              sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-text-header">LOREM IPSUM</h4>
-            <p class="main-text-section">
-              ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-              sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-text-header">LOREM IPSUM</h4>
-            <p class="main-text-section">
-              ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-              sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-text-header">LOREM IPSUM</h4>
-            <p class="main-text-section">
-              ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-              sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </div>
-      <section>
-        <h2 class="what-we-do">Czym się zajmujemy</h2>
-        <ul>
+
+      <ul class="second-body-section">
+        <li>
+          <h4 class="main-text-header">LOREM IPSUM</h4>
+          <p class="main-text-section">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4 class="main-text-header">LOREM IPSUM</h4>
+          <p class="main-text-section">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4 class="main-text-header">LOREM IPSUM</h4>
+          <p class="main-text-section">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4 class="main-text-header">LOREM IPSUM</h4>
+          <p class="main-text-section">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+      </ul>
+
+      <section class="what-we">
+        <h2 class="what-we-do">Czym się zajmujemy</h2>
+        <ul class="first-imgs">
           <li>
             <img
               src="images/img3.jpg"
@@ -125,74 +132,81 @@
         </ul>
       </section>
 
-      <section>
-        <h2 class="team">Nasz zespół</h2>
-        <ul>
-          <li>
-            <img
-              src="images/img5.jpg"
-              alt="smiling gentleman with a beard wearing glasses"
-              width="270"
-              height="260"
-            />
-            <span class="name">John Doe </span
-            ><span class="job-position">Product Designer</span>
-          </li>
-          <li>
-            <img
-              src="images/img4.jpg"
-              alt="smiling lady with long blond hair wearing glasses"
-              width="270"
-              height="260"
-            />
-            <span class="name">John Doe </span
-            ><span class="job-position">Frontend Developer</span>
-          </li>
-          <li>
-            <img
-              src="images/img2.jpg"
-              alt="smiling gentleman with short stubble"
-              width="270"
-              height="260"
-            />
-            <span class="name">John Doe </span
-            ><span class="job-position">Marketing</span>
-          </li>
-          <li>
-            <img
-              src="images/img.jpg"
-              alt="smiling gentleman with a beard wearing glasses"
-              width="270"
-              height="260"
-            />
-            <span class="name">John Doe </span
-            ><span class="job-position">UI Designer</span>
-          </li>
-        </ul>
+      <section class="our-team">
+        <div class="team-section">
+          <h2 class="team">Nasz zespół</h2>
+
+          <ul class="second-imgs">
+            <li class="team-card">
+              <img
+                class="team-img"
+                src="images/img5.jpg"
+                alt="smiling gentleman with a beard wearing glasses"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">John Doe</h3>
+              <p class="job-position">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/img4.jpg"
+                alt="smiling lady with long blond hair wearing glasses"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">John Doe</h3>
+              <p class="job-position">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/img2.jpg"
+                alt="smiling gentleman with short stubble"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">John Doe</h3>
+              <p class="job-position">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/img.jpg"
+                alt="smiling gentleman with a beard wearing glasses"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">John Doe</h3>
+              <p class="job-position">Product Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer>
-      <h3>
-        <a href="/" class="logotype link-none-underline"
+    <footer class="footer-container">
+      <div class="footer-section container">
+        <a href="/" class="logotype link-none-underline white-text"
           ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
-      </h3>
-      <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul class="contacts-list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link-none-underline blue-text button"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+48111111111" class="link-none-underline contacts button"
-            >+48 111 111 111</a
-          >
-        </li>
-      </ul>
+
+        <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+        <ul class="footer-contacts-list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-none-underline button contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+48111111111"
+              class="link-none-underline contacts button"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
