--- a/portfolio.html
+++ b/portfolio.html
@@ -14,191 +14,189 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <nav>
+    <div class="border">
+      <header class="header-container container">
         <a href="/" class="logotype link-none-underline"
           ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
+        <nav>
+          <ul class="nav-list">
+            <li>
+              <a href="/agencja" class="agency link-none-underline button"
+                >Agencja</a
+              >
+            </li>
+            <li>
+              <a
+                href="portfolio.html"
+                class="portfolio link-none-underline button"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="/kontact" class="contact-link link-none-underline button"
+                >Kontact</a
+              >
+            </li>
+          </ul>
+        </nav>
         <ul class="contacts-list">
           <li>
-            <a href="/agencja" class="agency link-none-underline button"
-              >Agencja</a
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-none-underline blue-text button"
+              >info@devstudio.com</a
             >
           </li>
           <li>
             <a
-              href="portfolio.html"
-              class="portfolio link-none-underline button"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="/kontact" class="contact-link link-none-underline button"
-              >Kontact</a
+              href="tel:+48111111111"
+              class="link-none-underline contacts button"
+              >+48 111 111 111</a
             >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts-list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link-none-underline blue-text button"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+48111111111" class="link-none-underline contacts button"
-            >+48 111 111 111</a
-          >
-        </li>
-      </ul>
-    </header>
+      </header>
+    </div>
 
     <main>
-      <div>
+      <div class="container">
         <nav>
-          <ul class="button-list">
+          <ul class="filter-buttons">
             <li>
-              <button type="button" class="button-list button">
+              <button type="button" class="filter-button button">
                 Wszystkie
               </button>
             </li>
             <li>
-              <button type="button" class="button-list button">Strony</button>
+              <button type="button" class="filter-button button">Strony</button>
             </li>
             <li>
-              <button type="button" class="button-list button">
+              <button type="button" class="filter-button button">
                 Aplikacje
               </button>
             </li>
             <li>
-              <button type="button" class="button-list button">Dizajn</button>
+              <button type="button" class="filter-button button">Dizajn</button>
             </li>
             <li>
-              <button type="button" class="button-list button">
+              <button type="button" class="filter-button button">
                 Marketing
               </button>
             </li>
           </ul>
         </nav>
       </div>
-      <div>
-        <ul>
-          <li>
+      <div class="container">
+        <ul class="card-list">
+          <li class="card">
             <img
               src="images/img7.jpg"
               alt="laptop screen"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Technocrack<span class="subpage-type">Strona internetowa</span>
-            </p>
+            <h4 class="subpage-name">Technocrack</h4>
+            <p class="subpage-type">Strona internetowa</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img8.jpg"
               alt="two basketball players"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Grafika New Orlean vs Golden Star
-              <span class="subpage-type">Dizajn</span>
-            </p>
+            <h4 class="subpage-name">Grafika New Orlean vs Golden Star</h4>
+            <p class="subpage-type">Dizajn</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img9.jpg"
               alt="seafood restaurant logotype"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Restauracja Seafood <span class="subpage-type">Aplikacja</span>
-            </p>
+            <h4 class="subpage-name">Restauracja Seafood</h4>
+            <p class="subpage-type">Aplikacja</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img10.jpg"
               alt="Headphones"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Projekt Prime <span class="subpage-type">Marketing</span>
-            </p>
+            <h4 class="subpage-name">Projekt Prime</h4>
+            <p class="subpage-type">Marketing</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img11.jpg"
               alt="two boxes"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Projekt Boxes <span class="subpage-type">Aplikacja</span>
-            </p>
+            <h4 class="subpage-name">Projekt Boxes</h4>
+            <p class="subpage-type">Aplikacja</p>
           </li>
-          <li>
+          <li class="card">
             <img src="images/img12.jpg" alt="screen" width="370" height="294" />
-            <p class="subpage-name">
-              Inspiration has no Borders
-              <span class="subpage-type">Strona internetowa</span>
-            </p>
+            <h4 class="subpage-name">Inspiration has no Borders</h4>
+            <p class="subpage-type">Strona internetowa</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img13.jpg"
               alt="magazine"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Magazyn Limited Edition <span class="subpage-type">Dizajn</span>
-            </p>
+            <h4 class="subpage-name">Magazyn Limited Edition</h4>
+            <p class="subpage-type">Dizajn</p>
           </li>
-          <li>
+          <li class="card">
             <img
               src="images/img14.jpg"
               alt="gift hanger"
               width="370"
               height="294"
             />
-            <p class="subpage-name">
-              Projekt LAB <span class="subpage-type">Marketing</span>
-            </p>
+            <h4 class="subpage-name">Projekt LAB</h4>
+            <p class="subpage-type">Marketing</p>
           </li>
-          <li>
+          <li class="card">
             <img src="images/img15.jpg" alt="laptop" width="370" height="294" />
-            <p>Growing Business <span class="subpage-type">Aplikacja</span></p>
+            <h4 class="subpage-name">Growing Business</h4>
+            <p class="subpage-type">Aplikacja</p>
           </li>
         </ul>
       </div>
     </main>
 
-    <footer>
-      <h3>
-        <a href="/" class="logotype link-none-underline"
+    <footer class="footer-container">
+      <div class="footer-section container">
+        <a href="/" class="logotype link-none-underline white-text"
           ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
         >
-      </h3>
-      <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul class="contacts-list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link-none-underline blue-text button"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+48111111111" class="link-none-underline contacts button"
-            >+48 111 111 111</a
-          >
-        </li>
-      </ul>
+
+        <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+        <ul class="footer-contacts-list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-none-underline button contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+48111111111"
+              class="link-none-underline contacts button"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
