--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <button type="button" class="order-button">Zamów usługę</button>
       </section>
 
-      <ul class="second-body-section">
+      <ul class="second-body-section container">
         <li>
           <h4 class="main-text-header">LOREM IPSUM</h4>
           <p class="main-text-section">
@@ -102,7 +102,7 @@
         </li>
       </ul>
 
-      <section class="what-we">
+      <section class="what-we container">
         <h2 class="what-we-do">Czym się zajmujemy</h2>
         <ul class="first-imgs">
           <li>
@@ -132,7 +132,7 @@
         </ul>
       </section>
 
-      <section class="our-team">
+      <section class="our-team conatainer">
         <div class="team-section">
           <h2 class="team">Nasz zespół</h2>
 
@@ -181,6 +181,7 @@
           </ul>
         </div>
       </section>
+    </div>
     </main>
 
     <footer class="footer-container">
