--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
     </header>
 
     <main>
-      <section class="main-section-background">
+      <div class="main-section-background">
+      <section class="main-section">
         <h1 class="main-section-header">
           EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
         </h1>
         <button type="button" class="order-button">Zamów usługę</button>
-      </section>
+      </section></div>
 
       <ul class="second-body-section container">
         <li>
