--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
     <div class="border">
       <header class="header-container container">
         <a href="/" class="logotype link-none-underline"
-          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
+          ><h3 class="logotype-button">
+            <span class="blue-text">Web</span>Studio
+          </h3></a
         >
         <nav>
           <ul class="nav-list">
@@ -44,7 +46,7 @@
           <li>
             <a
               href="mailto:info@devstudio.com"
-              class="link-none-underline blue-text button"
+              class="link-none-underline contacts button"
               >info@devstudio.com</a
             >
           </li>
@@ -176,7 +178,9 @@
     <footer class="footer-container">
       <div class="footer-section container">
         <a href="/" class="logotype link-none-underline white-text"
-          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
+          ><h3 class="logotype-button">
+            <span class="blue-text">Web</span>Studio
+          </h3></a
         >
 
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
