--- a/index.html
+++ b/index.html
@@ -22,46 +22,52 @@
   </head>
 
   <body>
-    <header class="header-container container">
-      <a href="/" class="logotype link-none-underline"
-        ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
-      >
-      <nav>
-        <ul class="nav-list">
+    <div class="border">
+      <header class="header-container container">
+        <a href="/" class="logotype link-none-underline"
+          ><h3 class="logotype-button">
+            <span class="blue-text">Web</span>Studio
+          </h3></a
+        >
+        <nav>
+          <ul class="nav-list">
+            <li>
+              <a href="/agencja" class="agency link-none-underline button"
+                >Agencja</a
+              >
+            </li>
+            <li>
+              <a
+                href="portfolio.html"
+                class="portfolio link-none-underline button"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="/kontact" class="contact-link link-none-underline button"
+                >Kontact</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts-list">
           <li>
-            <a href="/agencja" class="agency link-none-underline button"
-              >Agencja</a
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-none-underline contacts button"
+              >info@devstudio.com</a
             >
           </li>
           <li>
             <a
-              href="portfolio.html"
-              class="portfolio link-none-underline button"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="/kontact" class="contact-link link-none-underline button"
-              >Kontact</a
+              href="tel:+48111111111"
+              class="link-none-underline contacts button"
+              >+48 111 111 111</a
             >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts-list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link-none-underline blue-text button"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+48111111111" class="link-none-underline contacts button"
-            >+48 111 111 111</a
-          >
-        </li>
-      </ul>
-    </header>
+      </header>
+    </div>
 
     <main>
       <div class="main-section-background">
@@ -103,7 +109,8 @@
         </li>
       </ul>
 
-      <section class="what-we container">
+      <section class="what-we">
+        <div class="container">
         <h2 class="what-we-do">Czym się zajmujemy</h2>
         <ul class="first-imgs">
           <li>
@@ -131,10 +138,11 @@
             />
           </li>
         </ul>
+      </div>
       </section>
 
-      <section class="our-team conatainer">
-        <div class="team-section">
+      <section class="our-team">
+        <div class="container">
           <h2 class="team">Nasz zespół</h2>
 
           <ul class="second-imgs">
@@ -188,7 +196,7 @@
     <footer class="footer-container">
       <div class="footer-section container">
         <a href="/" class="logotype link-none-underline white-text"
-          ><h3 class="button"><span class="blue-text">Web</span>Studio</h3></a
+          ><h3 class="logotype-button"><span class="blue-text">Web</span>Studio</h3></a
         >
 
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
